---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/set-if.typ
snapshot_kind: text
---
#let task(
  body,
  critical: false,
) = {
  set text(red) if critical
  [- #body]
}

#task(
  critical: true,
)[Food today?]
#task(
  critical: false,
)[Work deadline]
